--- a/ControleFinanceiro/Views/TransactionAdd.xaml
+++ b/ControleFinanceiro/Views/TransactionAdd.xaml
@@ -49,7 +49,7 @@
         </Grid>
 
         <Entry x:Name="EntryName" Placeholder="Nome" />
-        <DatePicker x:Name="DatePickerDate" Margin="{OnPlatform Default='15,0', MacCatalyst='15,15,15,0'}"/>
+        <DatePicker x:Name="DatePickerDate" />
         <Entry x:Name="EntryValue" Placeholder="Valor" />
         <Button
          HorizontalOptions="Center"
